hphp/hack/test/typecheck/xhp/xhp_children_empty2.php.exp
File "xhp_children_empty2.php", line 3, characters 13-13:
A name is expected here. (Parsing[1002])
File "xhp_children_empty2.php", line 6, characters 13-17:
Unbound name: Empty (an object type) (Naming[2049])
