hphp/hack/test/typecheck/xhp/xhp_children_empty2.php
<?hh

final class Empty {}

class :my-html-two {
  children (Empty);
}
